# freeswitch

./: Makefile.am  configure.ac
libs/apr/: configure.ac
libs/apr-util/: apu-config.in  configure.gnu
libs/apr-util/xml/expat/lib/: Makefile.in
libs/esl/: fs_cli.c
libs/iksemel/src/: Makefile.am  stream.c
libs/libdingaling/: Makefile.am
libs/libvpx/: configure
libs/srtp/: Makefile.am
libs/srtp/crypto/include/: datatypes.h
scripts/ci/: build-requirements.sh
src/: switch.c  switch_core.c  switch_rtp.c
src/include/: switch_platform.h  switch_ssl.h
src/mod/applications/mod_distributor/: mod_distributor.c
src/mod/applications/mod_memcache/: mod_memcache.c
src/mod/applications/mod_random/: mod_random.c
src/mod/applications/mod_redis/: credis.c  credis.h
src/mod/applications/mod_spandsp/: mod_spandsp_modem.h
src/mod/codecs/mod_dahdi_codec/: mod_dahdi_codec.c
src/mod/endpoints/mod_h323/: Makefile.am
src/mod/endpoints/mod_rtmp/: handshake.h
src/mod/endpoints/mod_sofia/: sofia.c
src/mod/endpoints/mod_verto/: ws.c
src/mod/languages/mod_perl/: mod_perl.c
